[project]
name = "face-keypoint"
version = "0.1.0"
description = "face-keypoint detection"
authors = [
    {name = "Anton",email = "antoxaz18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"


[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
numpy = "<2"
opencv-python = "^4.11.0.86"
pillow = "^11.2.1"
mediapipe = "^0.10.21"
cv2-enumerate-cameras = "^1.2.2"
onnxruntime = "^1.22.1"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
